--- a/package.json
+++ b/package.json
@@ -1,9 +1,34 @@
 {
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server",
+    "client": "npm start --prefix=../KareemEstore",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "name": "onlinestore-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ahmad420/OnlineStore-Server.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ahmad420/OnlineStore-Server/issues"
+  },
+  "homepage": "https://github.com/ahmad420/OnlineStore-Server#readme",
+  "description": "",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.17"
   },
   "devDependencies": {
+    "concurrently": "^6.0.0",
     "nodemon": "^2.0.7"
   }
 }
